--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     </header>
     <body>
         <div id="test"></div>
-
+        <script src="//d3js.org/d3.v3.min.js"></script>
         <script>
             // Specify the API endpoint for food
             const apiUrl = 'http://localhost:4000/foods';
