updated scrip + index

--- a/index.html
+++ b/index.html
@@ -12,12 +12,20 @@
 
  
     <div class="main" id="main0">
-        <div class="innermain" id="inner3"></div>
+        <div class="innermain" id="inner0">
+            <button id="option1" onclick="scrollToSection()">Mulighed 1</button>
+            <button id="option2" onclick="scrollToSection()">Mulighed 2</button>
+            <button id="option3" onclick="scrollToSection()">Mulighed 3</button>
+        </div>
       </div>
 
     <div class="main" id="main1">
-        <div class="innermain" id="inner3"></div>
+        <div class="innermain" id="inner1">
+            <div id="dynamicContent">Indholdet ændres dynamisk her.</div>
+        </div>
       </div>
+
+
     <div class="main" id="main2">
       <div class="innermain" id="inner2">
         <h2>En El-bil udleder mere co2 end hvad man kunne forvente. Produktionen af et batteri er bla bla bla bla</h2>
@@ -83,5 +91,6 @@
         });
     </script>
     <script src="graf1.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
