--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
     <div class="main" id="main2">
       <div class="innermain" id="inner2">
+        <div id="graf"></div>
         <h2>En El-bil udleder mere co2 end hvad man kunne forvente. Produktionen af et batteri er bla bla bla bla</h2>
         <button id="knap2">Update Chart</button>
       </div>
