--- a/index.html
+++ b/index.html
@@ -6,30 +6,36 @@
 
     <link rel="stylesheet" href="style.css" />
   </head>
- 
-  <body>
 
- 
+  <body>
     <div class="main" id="main0">
-        <div class="innermain" id="inner0">
-            <button id="option1" onclick="scrollToSection()">Mulighed 1</button>
-            <button id="option2" onclick="scrollToSection()">Mulighed 2</button>
-            <button id="option3" onclick="scrollToSection()">Mulighed 3</button>
+      <div class="innermain" id="inner0">
+        <div>
+          <button id="option1" onclick="scrollToSection()">Mulighed 1</button>
+        </div>
+        <div>
+          <button id="option2" onclick="scrollToSection()">Mulighed 2</button>
+        </div>
+        <div>
+          <button id="option3" onclick="scrollToSection()">Mulighed 3</button>
         </div>
       </div>
+    </div>
 
     <div class="main" id="main1">
-        <div class="innermain" id="inner1">
-            <div id="dynamicContent">Indholdet ændres dynamisk her.</div>
-        </div>
+      <div class="innermain" id="inner1">
+        <div id="dynamicContent">Indholdet ændres dynamisk her.</div>
       </div>
-
+    </div>
 
     <div class="main" id="main2">
       <div class="innermain" id="inner2">
-        <div id="graf"></div>
-        <h2>En El-bil udleder mere co2 end hvad man kunne forvente. Produktionen af et batteri er bla bla bla bla</h2>
+        <h2>
+          En El-bil udleder mere co2 end hvad man kunne forvente. Produktionen
+          af et batteri er bla bla bla bla
+        </h2>
         <button id="knap2">Update Chart</button>
+        <div id="graf"></div>
       </div>
     </div>
 
@@ -90,7 +96,7 @@
           console.error("Error:", error);
         });
     </script>
-     <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
+    <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
     <script src="graf1.js"></script>
     <script src="script.js"></script>
   </body>
