--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
 
     <link rel="stylesheet" href="style.css" />
   </head>
+  <!-- Linket til d3 library -->
   <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
 
   <body>
 
- 
+  <!-- Buttons til quiz scroller -->
     <div class="main" id="main0">
         <div class="innermain" id="inner0">
             <button id="option1" onclick="scrollToSection()">Mulighed 1</button>
@@ -19,13 +20,14 @@
         </div>
       </div>
 
+  <!-- Resultatet af det første svar -->
     <div class="main" id="main1">
         <div class="innermain" id="inner1">
             <div id="dynamicContent">Indholdet ændres dynamisk her.</div>
         </div>
       </div>
 
-
+    <!-- Eksempel på graf -->
     <div class="main" id="main2">
       <div class="innermain" id="inner2">
         <div id="graf"></div>
@@ -34,6 +36,7 @@
       </div>
     </div>
 
+    <!-- Masser af "sider" til quizzen -->
     <div class="main" id="main3">
       <div class="innermain" id="inner3"></div>
     </div>
@@ -66,6 +69,7 @@
     </div>
     <div id="chart"></div>
 
+    <!-- Hent madvarer via API og list dem på siden - bare som test  -->
     <script>
       // Specify the API endpoint for food
       const apiUrl = "http://localhost:4000/foods";
@@ -91,6 +95,8 @@
           console.error("Error:", error);
         });
     </script>
+
+    
     <script src="graf1.js"></script>
     <script src="script.js"></script>
   </body>
