--- a/index.html
+++ b/index.html
@@ -47,10 +47,12 @@
       </div>
     </div>
 
-    <!-- Masser af "sider" til quizzen -->
+    <!-- Bubbleplot af ChatGPT vs. Streaming -->
     <div class="main" id="main3">
       <div class="innermain" id="inner3"></div>
     </div>
+
+    <!-- Masser af "sider" til quizzen -->
     <div class="main" id="main4">
       <div class="innermain" id="inner4"></div>
     </div>
@@ -98,7 +100,7 @@
           let html = "";
           foods.forEach((food) => {
             html += `<p>${food.produkt}</p>` + `<p> CO2e = ${food.co2e_kg}</p>`;
-            console.log(food);
+            // console.log(food);
           });
         })
 
@@ -110,5 +112,6 @@
     
     <script src="graf1.js"></script>
     <script src="script.js"></script>
+    <script src="bubbleplot_GPT_Streaming.js"></script>
   </body>
 </html>
