--- a/index.html
+++ b/index.html
@@ -49,7 +49,10 @@
 
     <!-- Bubbleplot af ChatGPT vs. Streaming -->
     <div class="main" id="main3">
-      <div class="innermain" id="inner3"></div>
+      <div class="innermain" id="inner3">
+        <div id="graf"></div>
+
+      </div>
     </div>
 
     <!-- Masser af "sider" til quizzen -->
@@ -111,6 +114,7 @@
 
     
     <script src="graf1.js"></script>
+    <script src="d2Barchart.js"></script>
     <script src="script.js"></script>
     <script src="bubbleplot_GPT_Streaming.js"></script>
   </body>
