--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <!-- Bubbleplot af ChatGPT vs. Streaming -->
     <div class="main" id="main3">
       <div class="innermain" id="inner3">
-        <div id="graf"></div>
+        <div id="graf2"></div>
 
       </div>
     </div>
