--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
     <script src="graf1.js"></script>
     <script src="d2Barchart.js"></script>
     <script src="script.js"></script>
+    <script src="stackedBarChart.js"></script>
     <script src="bubbleplot_GPT_Streaming.js"></script>
   </body>
 </html>
