--- a/index.html
+++ b/index.html
@@ -89,9 +89,10 @@
 
     
     <script src="graf1.js"></script>
-    <script src="d2Barchart.js"></script>
+    <!-- <script src="d2Barchart.js"></script> -->
     <script src="script.js"></script>
     <script src="stackedBarChart.js"></script>
-    <script src="bubbleplot_GPT_Streaming.js"></script>
+    <script type="module" src="bubbleplot_GPT_Streaming.js"></script>
+    <script type="module" src="bubbleplot_motocross_baal.js"></script>
   </body>
 </html>
