scroll lås + knapper tilføjet

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <div class="main" id="main0">
       <div class="innermain" id="inner0">
         <div>
-          <button id="option1" onclick="scrollToSection()">Mulighed 1</button>
+          <button id="option1" onclick="scrollForward()">Mulighed 1</button>
         </div>
         <div>
-          <button id="option2" onclick="scrollToSection()">Mulighed 2</button>
+          <button id="option2" onclick="scrollForward()">Mulighed 2</button>
         </div>
         <div>
-          <button id="option3" onclick="scrollToSection()">Mulighed 3</button>
+          <button id="option3" onclick="scrollForward()">Mulighed 3</button>
         </div>
       </div>
     </div>
@@ -29,6 +29,9 @@
   <!-- Resultatet af det første svar -->
     <div class="main" id="main1">
       <div class="innermain" id="inner1">
+        <button class="backbtn" onclick="scrollBack()">Forrige side</button>
+        <button class="forwardbtn" onclick="scrollForward()">Næste side</button>
+        <button class="topbtn" onclick="scrollToTop()">Til toppen</button>
         <div id="dynamicContent">Indholdet ændres dynamisk her.</div>
       </div>
     </div>
@@ -36,6 +39,9 @@
     <!-- Eksempel på graf -->
     <div class="main" id="main2">
       <div class="innermain" id="inner2">
+        <button class="backbtn" onclick="scrollBack()">Forrige side</button>
+        <button class="forwardbtn" onclick="scrollForward()">Næste side</button>
+        <button class="topbtn" onclick="scrollToTop()">Til toppen</button>
         <h2>
           En El-bil udleder mere co2 end hvad man kunne forvente. Produktionen
           af et batteri er bla bla bla bla
@@ -50,6 +56,9 @@
     <!-- Bubbleplot af ChatGPT vs. Streaming -->
     <div class="main" id="main3">
       <div class="innermain" id="inner3">
+        <button class="backbtn" onclick="scrollBack()">Forrige side</button>
+        <button class="forwardbtn" onclick="scrollForward()">Næste side</button>
+        <button class="topbtn" onclick="scrollToTop()">Til toppen</button>
         <div id="graf2"></div>
 
       </div>
@@ -57,31 +66,59 @@
 
     <!-- Masser af "sider" til quizzen -->
     <div class="main" id="main4">
-      <div class="innermain" id="inner4"></div>
+      <div class="innermain" id="inner4">
+        <button class="backbtn" onclick="scrollBack()">Forrige side</button>
+        <button class="forwardbtn" onclick="scrollForward()">Næste side</button>
+        <button class="topbtn" onclick="scrollToTop()">Til toppen</button>
+      </div>
     </div>
     <div class="main" id="main5">
-      <div class="innermain" id="inner5"></div>
+      <div class="innermain" id="inner5">
+        <button class="backbtn" onclick="scrollBack()">Forrige side</button>
+        <button class="forwardbtn" onclick="scrollForward()">Næste side</button>
+        <button class="topbtn" onclick="scrollToTop()">Til toppen</button>
+      </div>
     </div>
     <div class="main" id="main6">
-      <div class="innermain" id="inner6"></div>
+      <div class="innermain" id="inner6">
+        <button class="backbtn" onclick="scrollBack()">Forrige side</button>
+        <button class="forwardbtn" onclick="scrollForward()">Næste side</button>
+      </div>
     </div>
     <div class="main" id="main7">
-      <div class="innermain" id="inner7"></div>
+      <div class="innermain" id="inner7">
+        <button class="backbtn" onclick="scrollBack()">Forrige side</button>
+        <button class="forwardbtn" onclick="scrollForward()">Næste side</button>
+      </div>
     </div>
     <div class="main" id="main8">
-      <div class="innermain" id="inner8"></div>
+      <div class="innermain" id="inner8">
+        <button class="backbtn" onclick="scrollBack()">Forrige side</button>
+        <button class="forwardbtn" onclick="scrollForward()">Næste side</button>
+      </div>
     </div>
     <div class="main" id="main9">
-      <div class="innermain" id="inner9"></div>
+      <div class="innermain" id="inner9">
+        <button class="backbtn" onclick="scrollBack()">Forrige side</button>
+        <button class="forwardbtn" onclick="scrollForward()">Næste side</button>
+      </div>
     </div>
     <div class="main" id="main10">
-      <div class="innermain" id="inner10"></div>
+      <div class="innermain" id="inner10">
+        <button class="backbtn" onclick="scrollBack()">Forrige side</button>
+        <button class="forwardbtn" onclick="scrollForward()">Næste side</button>
+      </div>
     </div>
     <div class="main" id="main11">
-      <div class="innermain" id="inner11"></div>
+      <div class="innermain" id="inner11">
+        <button class="backbtn" onclick="scrollBack()">Forrige side</button>
+        <button class="forwardbtn" onclick="scrollForward()">Næste side</button>
+      </div>
     </div>
     <div class="main" id="main12">
-      <div class="innermain" id="inner12"></div>
+      <div class="innermain" id="inner12">
+        <button class="backbtn" onclick="scrollBack()">Forrige side</button>
+      </div>
     </div>
     <div id="chart"></div>
 
