--- a/index.html
+++ b/index.html
@@ -10,121 +10,177 @@
   <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
 
   <body>
-
-  <!-- Buttons til quiz scroller -->
+    <!-- Buttons til quiz scroller -->
     <div class="main" id="main0">
+      <div class="header">
+        <button class="backbtn" onclick="scrollBack()">Forrige side</button>
+        <img class="arrowBack" src="/Images/arrow-small-left.png" alt="" />
+        <button class="forwardbtn" onclick="scrollForward()">Næste side</button>
+        <img class="arrowDown" src="/Images/arrow-small-left.png" alt="" />
+        <button class="topbtn" onclick="scrollToTop()">Til toppen</button>
+        <img class="arrowHome" src="/Images/angle-double-small-up.png" alt="" />
+      </div>
       <div class="innermain" id="inner0">
         <div>
-          <button id="option1" onclick="scrollForward()">Mulighed 1</button>
+          <h1>
+            Dilemma 1 : Du er lige stået op og skal have noget morgen mad. Hvad
+            vælger du ?
+          </h1>
         </div>
-        <div>
-          <button id="option2" onclick="scrollForward()">Mulighed 2</button>
+        <div class="dilemmaImages1">
+          <img class="havregrynImg" src="Images/Havregryn.png" alt="" />
+          <img class="sandwichImg" src="Images/Sandwich.png" alt="" />
+          <img class="kaffeImg" src="Images/Kaffe.png" alt="" />
         </div>
-        <div>
-          <button id="option3" onclick="scrollForward()">Mulighed 3</button>
+        <div class="dilemmaKnapper1">
+          <button
+            id="dillema1Knap1"
+            class="dilemmaButton"
+            onclick="scrollForward()">
+            Havregryn med frugt
+          </button>
+          <button
+            id="dillema1Knap2"
+            class="dilemmaButton"
+            onclick="scrollForward()">
+            Kaffe og wienerbrød
+          </button>
+          <button
+            id="dillema1Knap3"
+            class="dilemmaButton"
+            onclick="scrollForward()">
+            Brød med peanutbutter og advocado
+          </button>
         </div>
       </div>
     </div>
 
-  <!-- Resultatet af det første svar -->
+    <!-- Resultatet af det første svar -->
     <div class="main" id="main1">
-      <div class="innermain" id="inner1">
+      <div class="header">
         <button class="backbtn" onclick="scrollBack()">Forrige side</button>
         <button class="forwardbtn" onclick="scrollForward()">Næste side</button>
         <button class="topbtn" onclick="scrollToTop()">Til toppen</button>
+      </div>
+      <div class="innermain" id="inner1">
         <div id="dynamicContent">Indholdet ændres dynamisk her.</div>
       </div>
     </div>
 
     <!-- Eksempel på graf -->
     <div class="main" id="main2">
-      <div class="innermain" id="inner2">
+      <div class="header">
         <button class="backbtn" onclick="scrollBack()">Forrige side</button>
         <button class="forwardbtn" onclick="scrollForward()">Næste side</button>
         <button class="topbtn" onclick="scrollToTop()">Til toppen</button>
+      </div>
+      <div class="innermain" id="inner2">
         <h2>
           En El-bil udleder mere co2 end hvad man kunne forvente. Produktionen
           af et batteri er bla bla bla bla
         </h2>
-        <h2>En El-bil udleder mere co2 end hvad man kunne forvente. Produktionen af et batteri er bla bla bla bla</h2>
+        <h2>
+          En El-bil udleder mere co2 end hvad man kunne forvente. Produktionen
+          af et batteri er bla bla bla bla
+        </h2>
+
+        <div id="graf"></div>
+        <div id="graf"></div>
         <button id="knap2">Update Chart</button>
-        <div id="graf"></div>
-        <div id="graf"></div>
       </div>
     </div>
 
     <!-- Bubbleplot af ChatGPT vs. Streaming -->
     <div class="main" id="main3">
-      <div class="innermain" id="inner3">
+      <div class="header">
         <button class="backbtn" onclick="scrollBack()">Forrige side</button>
         <button class="forwardbtn" onclick="scrollForward()">Næste side</button>
         <button class="topbtn" onclick="scrollToTop()">Til toppen</button>
+      </div>
+      <div class="innermain" id="inner3">
         <div id="graf2"></div>
-
       </div>
     </div>
 
     <!-- Masser af "sider" til quizzen -->
     <div class="main" id="main4">
-      <div class="innermain" id="inner4">
+      <div class="header">
         <button class="backbtn" onclick="scrollBack()">Forrige side</button>
         <button class="forwardbtn" onclick="scrollForward()">Næste side</button>
         <button class="topbtn" onclick="scrollToTop()">Til toppen</button>
       </div>
+      <div class="innermain" id="inner4"></div>
     </div>
+
     <div class="main" id="main5">
-      <div class="innermain" id="inner5">
+      <div class="header">
         <button class="backbtn" onclick="scrollBack()">Forrige side</button>
-        <button class="forwardbtn" onclick="scrollForward()">Næste side</button>
-        <button class="topbtn" onclick="scrollToTop()">Til toppen</button>
+        <button class="forwardbtn" onclick="scrollForward()">
+          Næste side
+        </button>
+      <div class="innermain" id="inner5">
+       
+          <button class="topbtn" onclick="scrollToTop()">Til toppen</button>
+        </div>
       </div>
     </div>
     <div class="main" id="main6">
-      <div class="innermain" id="inner6">
+      <div class="header">
         <button class="backbtn" onclick="scrollBack()">Forrige side</button>
         <button class="forwardbtn" onclick="scrollForward()">Næste side</button>
+        <button class="topbtn" onclick="scrollToTop()">Til toppen</button>
       </div>
+      <div class="innermain" id="inner6"></div>
     </div>
     <div class="main" id="main7">
-      <div class="innermain" id="inner7">
+      <div class="header">
         <button class="backbtn" onclick="scrollBack()">Forrige side</button>
         <button class="forwardbtn" onclick="scrollForward()">Næste side</button>
+        <button class="topbtn" onclick="scrollToTop()">Til toppen</button>
       </div>
+      <div class="innermain" id="inner7"></div>
     </div>
     <div class="main" id="main8">
-      <div class="innermain" id="inner8">
+      <div class="header">
         <button class="backbtn" onclick="scrollBack()">Forrige side</button>
         <button class="forwardbtn" onclick="scrollForward()">Næste side</button>
+        <button class="topbtn" onclick="scrollToTop()">Til toppen</button>
       </div>
+      <div class="innermain" id="inner8"></div>
     </div>
     <div class="main" id="main9">
-      <div class="innermain" id="inner9">
+      <div class="header">
         <button class="backbtn" onclick="scrollBack()">Forrige side</button>
         <button class="forwardbtn" onclick="scrollForward()">Næste side</button>
+        <button class="topbtn" onclick="scrollToTop()">Til toppen</button>
       </div>
+      <div class="innermain" id="inner9"></div>
     </div>
     <div class="main" id="main10">
-      <div class="innermain" id="inner10">
+      <div class="header">
         <button class="backbtn" onclick="scrollBack()">Forrige side</button>
         <button class="forwardbtn" onclick="scrollForward()">Næste side</button>
+        <button class="topbtn" onclick="scrollToTop()">Til toppen</button>
       </div>
+      <div class="innermain" id="inner10"></div>
     </div>
     <div class="main" id="main11">
-      <div class="innermain" id="inner11">
+      <div class="header">
         <button class="backbtn" onclick="scrollBack()">Forrige side</button>
         <button class="forwardbtn" onclick="scrollForward()">Næste side</button>
+        <button class="topbtn" onclick="scrollToTop()">Til toppen</button>
       </div>
+      <div class="innermain" id="inner11"></div>
     </div>
     <div class="main" id="main12">
-      <div class="innermain" id="inner12">
+      <div class="header">
         <button class="backbtn" onclick="scrollBack()">Forrige side</button>
+        <button class="topbtn" onclick="scrollToTop()">Til toppen</button>
       </div>
+      <div class="innermain" id="inner12"></div>
     </div>
     <div id="chart"></div>
 
-   
-
-    
     <script src="graf1.js"></script>
     <!-- <script src="d2Barchart.js"></script> -->
     <script src="script.js"></script>
