--- a/test.html
+++ b/test.html
@@ -18,7 +18,7 @@
         <button class="forwardbtn" onclick="scrollForward()">Næste side</button>
         <img class="arrowDown" src="/Images/arrow-small-left.png" alt="" />
         <button class="topbtn" onclick="scrollToTop()">Til toppen</button>
-        <img class="arrowHome" src="/Images/angle-double-small-up.png" alt="" />
+        <img class="arrowH" src="/Images/angle-double-small-up.png" alt="" />
       </div>
       <div class="innermain" id="inner0">
         <div>
