--- a/index.html
+++ b/index.html
@@ -115,14 +115,12 @@
     <div class="main" id="main5">
       <div class="header">
         <button class="backbtn" onclick="scrollBack()">Forrige side</button>
-        <button class="forwardbtn" onclick="scrollForward()">
-          Næste side
-        </button>
-      <div class="innermain" id="inner5">
-       
-          <button class="topbtn" onclick="scrollToTop()">Til toppen</button>
-        </div>
+        <button class="forwardbtn" onclick="scrollForward()">Næste side</button>
+        <button class="topbtn" onclick="scrollToTop()">Til toppen</button>
+
+        
       </div>
+      <div class="innermain" id="inner5"></div>
     </div>
     <div class="main" id="main6">
       <div class="header">
