--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>QuizzProject</title>
 
-    <link type="text/css" rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" type="text/css" href="/style.css" />
   </head>
   <!-- Linket til d3 library -->
   <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
