--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
     <!-- <script src="d2Barchart.js"></script> -->
     <script src="/script.js"></script>
     <script src="/stackedBarChart.js"></script>
-    <script type="text/javascript" src="/bubbleplot_GPT_Streaming.js"></script>
-    <script type="text/javascript" src="/bubbleplot_motocross_baal.js"></script>
+    <script type="application/javascript" src="/bubbleplot_GPT_Streaming.js"></script>
+    <script type="module" src="/bubbleplot_motocross_baal.js"></script>
   </body>
 </html>
