Tilføjet transport graf (betaversion)

--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
         <button class="topbtn" onclick="scrollToTop()">Til toppen</button>
       </div>
       <div class="innermain" id="inner4"></div>
+      <div id="test"></div>
     </div>
 
     <div class="main" id="main5">
@@ -182,6 +183,7 @@
     <script src="/graf1.js"></script>
     <!-- <script src="d2Barchart.js"></script> -->
     <script src="/script.js"></script>
+    <script src="transport.js"></script>
     <script src="/stackedBarChart.js"></script>
     <script type="application/javascript" src="/bubbleplot_GPT_Streaming.js"></script>
     <script type="module" src="/bubbleplot_motocross_baal.js"></script>
