Forskellige fixes efter flyt i mapper

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>QuizzProject</title>
 
-    <link rel="stylesheet" type="text/css" href="/style.css" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <!-- Linket til d3 library -->
   <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
@@ -14,11 +14,11 @@
     <div class="main" id="main0">
       <div class="header">
         <button class="backbtn" onclick="scrollBack()">Forrige side</button>
-        <img class="arrowBack" src="/Images/arrow-small-left.png" alt="" />
+        <img class="arrowBack" src="Images/arrow-small-left.png" alt="" />
         <button class="forwardbtn" onclick="scrollForward()">Næste side</button>
-        <img class="arrowDown" src="/Images/arrow-small-left.png" alt="" />
+        <img class="arrowDown" src="Images/arrow-small-left.png" alt="" />
         <button class="topbtn" onclick="scrollToTop()">Til toppen</button>
-        <img class="arrowHome" src="/Images/angle-double-small-up.png" alt="" />
+        <img class="arrowHome" src="Images/angle-double-small-up.png" alt="" />
       </div>
       <div class="innermain" id="inner0">
         <div>
@@ -179,10 +179,10 @@
     </div>
     <div id="chart"></div>
 
-    <script src="/scripts/graf1.js"></script>
-    <script src="/scripts/script.js"></script>
-    <script src="/scripts/stackedBarChart.js"></script>
-    <script type="application/javascript" src="/scripts/bubbleplot_GPT_Streaming.js"></script>
-    <script type="module" src="/scripts/bubbleplot_motocross_baal.js"></script>
+    <script src="scripts/graf1.js"></script>
+    <script src="scripts/script.js"></script>
+    <script src="scripts/stackedBarChart.js"></script>
+    <script type="application/javascript" src="scripts/bubbleplot_GPT_Streaming.js"></script>
+    <script type="module" src="scripts/bubbleplot_motocross_baal.js"></script>
   </body>
 </html>
