--- a/frontend/index.html
+++ b/frontend/index.html
@@ -55,6 +55,16 @@
       </div>
       <div class="innermain" id="inner1">
         <div id="dynamicContent">Indholdet ændres dynamisk her.</div>
+        <h3><br>Din CO2e udledning</h3>
+        <div id="yourEmission" style="color: lightblue; font-size: 40px">Du har endnu ikke udledt noget CO2</div>
+        <p><br />Nu er der en simpel funktion, hvor:</p>
+        <ol>
+          <ld>Havregryn tilføjer - 500g CO2</ld><br />
+          <ld>Kaffe og wienerbrød tilføjer - 200g CO2</ld><br>
+          <ld>Brød tilføjer - 1500g CO2</ld>
+        </ol>
+        <p>Så hvis du klikker på knapperne i dilemma 1 flere gange, så bliver tallene lagt sammen, og det bliver højere og højere. <br />Hvis du trykker på 'Til toppen' nustiller den. Det er bare lavet som et eksempel, så vi ligesom er i gang. Mvh. Andreas <br><br>Ps. jeg kan muligvis godt se en smule på kode her torsdag og fredag aften, men ellers skal i bare redigere alt det, I har lyst til. <br><br>Vi snakkes tirsdag eller onsdag</p>
+
       </div>
     </div>
 
@@ -78,16 +88,19 @@
       </div>
     </div>
 
-    <!-- Bubbleplot af ChatGPT vs. Streaming -->
+
     <div class="main" id="main3">
       <div class="header">
       </div>
       <div class="innermain" id="inner3">
+
+
+
         <div id="graf2"></div>
       </div>
     </div>
 
-    <!-- Masser af "sider" til quizzen -->
+
     <div class="main" id="main4">
       <div class="header">
       </div>
