Fået transport data til, at virke igen

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -112,17 +112,24 @@
       </div>
       <div class="innermain" id="inner5"></div>
     </div>
+
     <div class="main" id="main6">
       <div class="header">
       </div>
       <div class="innermain" id="inner6"></div>
+      <div id="test"></div>
     </div>
+
+
     <div class="main" id="main7">
       <div class="header">
 
       </div>
       <div class="innermain" id="inner7"></div>
+      
     </div>
+
+    
     <div class="main" id="main8">
       <div class="header">
 
@@ -156,6 +163,7 @@
 
     <script src="scripts/graf1.js"></script>
     <script src="scripts/script.js"></script>
+    <script src="scripts/transport.js"></script>
     <script src="scripts/stackedBarChart.js"></script>
     <script type="application/javascript" src="scripts/bubbleplot_GPT_Streaming.js"></script>
     <script type="module" src="scripts/bubbleplot_motocross_baal.js"></script>
