--- a/frontend/index.html
+++ b/frontend/index.html
@@ -117,7 +117,6 @@
       <div class="header">
       </div>
       <div class="innermain" id="inner6"></div>
-      <div id="test"></div>
     </div>
 
 
@@ -125,7 +124,9 @@
       <div class="header">
 
       </div>
-      <div class="innermain" id="inner7"></div>
+      <div class="innermain" id="inner7">
+        <div id="test"></div>
+      </div>
       
     </div>
 
