--- a/frontend/index.html
+++ b/frontend/index.html
@@ -43,7 +43,7 @@
             id="dillema1Knap3"
             class="dilemmaButton"
             onclick="scrollForward()">
-            Brød med peanutbutter og advocado
+            Brød med peanutbutter og avocado
           </button>
         </div>
       </div>
