Fået faktaboks på rejsekort

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -194,6 +194,7 @@
       <div class="header">
       </div>
       <div class="innermain" id="inner8">
+        <div id="factBox"></div>
         <svg id="uniqueSvg" width="880" height="600"></svg>
       </div>
     </div>
