Opsætning af siden

--- a/frontend/test.html
+++ b/frontend/test.html
@@ -22,7 +22,7 @@
       </div>
       <div class="innermain" id="inner0">
         <div>
-          <h1>
+          <h1 class="">
             Dilemma 1 : Du er lige stået op og skal have noget morgen mad. Hvad
             vælger du ?
           </h1>
