--- a/frontend/index.html
+++ b/frontend/index.html
@@ -225,7 +225,7 @@
     <div class="main" id="main7">
       <div class="header"></div>
       <div class="innermain" id="inner7">
-        <div id="dynamicContent">Indholdet ændres dynamisk her.</div>
+           <div id="dynamicContent">Indholdet ændres dynamisk her.</div>
         <h3><br>Din CO2e udledning</h3>
         <div id="yourEmission" style="color: lightblue; font-size: 40px">Du har endnu ikke udledt noget CO2</div>
         <ol>
@@ -432,6 +432,7 @@
     <script src="scripts/graf1.js"></script>
     <script src="scripts/stackedBarChart.js"></script>
     <script src="scripts/stackedBarChartFrokost.js"></script>
+    <script src="scripts/stackedBarChartFrokostAftensmad.js"></script>
     <script src="scripts/rejsekort.js"></script>
     <script src="scripts/script.js"></script>
     <script src="scripts/transport.js"></script>
