--- a/frontend/index.html
+++ b/frontend/index.html
@@ -69,12 +69,17 @@
       <div class="innermain" id="inner1">
         <div id="dynamicContent">Indholdet ændres dynamisk her.</div>
         <h3><br>Din CO2e udledning</h3>
-        <div id="yourEmission" style="color: lightblue; font-size: 40px">Du har endnu ikke udledt noget CO2</div>
+        <div class="yourEmission" style="color: lightblue; font-size: 40px">Du har endnu ikke udledt noget CO2</div>
         <ol>
           <ld>Havregryn tilføjer - 500g CO2</ld><br />
           <ld>Kaffe og wienerbrød tilføjer - 200g CO2</ld><br>
           <ld>Brød tilføjer - 1500g CO2</ld>
         </ol>
+
+        <div class="yourEmission" style="color: lightblue; font-size: 40px">Du har endnu ikke udledt noget CO2</div>
+        <div class="yourEmission" style="color: lightblue; font-size: 40px">Du har endnu ikke udledt noget CO2</div>
+        <div class="yourEmission" style="color: lightblue; font-size: 40px">Du har endnu ikke udledt noget CO2</div>
+
 
       </div>
     </div>
