--- a/frontend/index.html
+++ b/frontend/index.html
@@ -35,8 +35,8 @@
         </div>
         <div class="dilemmaImages1">
           <img class="havregrynImg" src="Images/Havregryn.png" alt="" />
-          <img class="sandwichImg" src="Images/Sandwich.png" alt="" />
           <img class="kaffeImg" src="Images/Kaffe.png" alt="" />
+          <img class="sandwichImg" src="Images/Sandwich.png" alt="" />
         </div>
         <div class="dilemmaKnapper1">
           <button
@@ -87,8 +87,8 @@
           </h1>
         </div>
         <div class="dilemmaImages1">
-          <img class="havregrynImg" src="Images/Havregryn.png" alt="" />
-          <img class="kaffeImg" src="Images/Kaffe.png" alt="" />
+          <img class="coldShowerImg" src="Images/coldShower.png" alt="" />
+          <img class="hotShowerImg" src="Images/hotShower.png" alt="" />
         </div>
         <div class="dilemmaKnapper1">
           <button
@@ -124,7 +124,7 @@
 
         <div id="graf"></div>
         <div id="graf"></div>
-        <button id="knap2">Update Chart</button>
+        <button id="updateChartBtn">Afspil grafen</button>
       </div>
     </div>
 
@@ -276,7 +276,7 @@
       </div>
       <div class="innermain" id="inner7">
         <div id="factBox"></div>
-        <svg id="uniqueSvg" width="880" height="600"></svg>
+        <svg id="uniqueSvg" width="1200" height="800"></svg>
       </div>
     </div>
 
