--- a/frontend/index.html
+++ b/frontend/index.html
@@ -423,7 +423,7 @@
 
 
     <div id="chart"></div>
-    <script src="scripts/animations/btnAnimation"></script>
+    <script src="scripts/animations/btnAnimation.js"></script>
     <script src="scripts/graf1.js"></script>
     <script src="scripts/stackedBarChart.js"></script>
     <script src="scripts/stackedBarChartFrokost.js"></script>
