--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,9 +16,12 @@
 
     <div class="main" id="main0">
       <div class="header">
-
       </div>
       <div class="innermain" id="inner0">
+        <h1>Red Planeten - Dine Daglige Valg Gør en Forskel</h1>
+        <h2>Hvert år øges fokus på behovet for at redde vores elskede planet. Men hvilke skridt kan hver enkelt af os tage for at sikre en bæredygtig fremtid?
+           På denne side vil du blive guidet gennem en typisk hverdag og se, hvordan dine valg påvirker klimaet. Samtidig vil vi præsentere alternative valg, som kan hjælpe med at beskytte jorden. Lær, hvordan små ændringer i din daglige rutine kan gøre en stor forskel for vores fælles fremtid.
+        </h2>
       </div>
       
     </div>
@@ -29,9 +32,9 @@
       <div class="innermain" id="inner1">
         <div>
           <h1 class="question">
-            Dilemma 1 : Du er lige stået op og skal have noget morgen mad. Hvad
-            vælger du ?
+            Din Dag Starter - Hvad Vælger Du til Morgenmad?
           </h1>
+          <h2>Dagen begynder, og du er lige vågnet. Det er tid til morgenmad, og du har tre forskellige måltider at vælge imellem. Hvilket vælger du?</h2>
         </div>
         <div class="dilemmaImages1">
           <img class="havregrynImg" src="Images/Havregryn.png" alt="" />
@@ -68,7 +71,6 @@
       <div class="innermain" id="inner2">
         <div id="dynamicContent">Indholdet ændres dynamisk her.</div>
         <div class="yourEmission" style="color: rgb(255, 255, 255); font-size: 40px">Du har endnu ikke udledt noget CO2</div>
-      
       </div>
       <div class="header">
       </div>
@@ -82,9 +84,8 @@
       </div>
       <div class="innermain" id="inner3">
         <div>
-          <h1 class="question">
-            Dilemma 2 : Du har nu spist og skal have et bad. Bliver det et varmt eller koldt bad ?
-          </h1>
+            <h1 class="question">Efter Morgenmaden - Tid til et Bad</h1>
+            <h2>Efter morgenmaden er det tid til et bad. Foretrækker du et hurtigt, koldt bad på 5 minutter, eller har du brug for et langt, varmt bad på 15 minutter?</h2>
         </div>
         <div class="dilemmaImages1">
           <img class="coldShowerImg" src="Images/coldShower.png" alt="" />
@@ -135,9 +136,8 @@
       </div>
       <div class="innermain" id="inner5">
         <div>
-          <h1>
-            Dilemma 3 : Det er tid til at komme på arbejde, hvilken for transport vælger du ? 
-          </h1>
+          <h1 class="question">Afsted på Arbejde - Dit Valg af Transport</h1>
+          <h2>Nu er det tid til at tage på arbejde. Du har cirka 15 km til din arbejdsplads. Hvilket transportmiddel vil du benytte dig af?</h2>
         </div>
         <div class="dilemmaImages1">
           <img class="havregrynImg" src="Images/Havregryn.png" alt="" />
@@ -183,9 +183,8 @@
       </div>
       <div class="innermain" id="inner7">
         <div>
-          <h1 class="question">
-            På arbejdet er der frokostbuffet. Du kan spiste vegetardeller eller frikadeller af svin. Hvad snupper på din tallerken?
-          </h1>
+          <h1 class="question">Frokosttid - Buffet på arbejdet</h1>
+          <h2>Halvdelen af din arbejdsdag er gået, og det er blevet tid til den lækre frokostbuffet på arbejdet. Hvad har du lyst til at spise i dag?</h2>
         </div>
         <div class="dilemmaImages1">
           <img class="havregrynImg" src="Images/Havregryn.png" alt="" />
@@ -238,9 +237,8 @@
       </div>
       <div class="innermain" id="inner9">
         <div>
-          <h1 class="question">
-            Dilemma 5 : Efter arbejde skal planlægge en ferie med familien. I er to voksne og to børn og kan tage færgen fra Aarhus til Samsø på telttur, eller I kan tage flyet til Rom. Hvad vælger du?
-          </h1>
+          <h1 class="question">Efter Arbejde - Planlægning af Sommerferie</h1>
+          <h2>Efter arbejde har du og konen aftalt, at I skal planlægge sommerferie, og finde ud af hvor I gerne vil rejse hen, i er to voksne og to børn, hvor vil i gerne rejse hen?</h2>
         </div>
         <div class="dilemmaImages1">
           <img class="havregrynImg" src="Images/Havregryn.png" alt="" />
@@ -286,9 +284,8 @@
       </div>
       <div class="innermain" id="inner11">
         <div>
-          <h1 class="question">
-            Dilemma 6 : Når du har fået fri, vil du nyde din eftermiddag med en god hobby. Du kan gå til spejder og lave bål, eller du kan tage på motocrossbanen i 1½ time. Hvad vælger du?
-          </h1>
+          <h1 class="question">Tid til Din Hobby - Dagens Højdepunkt</h1>
+          <h2>Efter sommerferieplanlægning og en lang arbejdsdag er det nu tid til dagens højdepunkt: din hobby. Hvad er din hobby?</h2>
         </div>
         <div class="dilemmaImages1">
           <img class="havregrynImg" src="Images/Havregryn.png" alt="" />
@@ -328,9 +325,8 @@
       </div>
       <div class="innermain" id="inner13">
         <div>
-          <h1 class="question">
-            Dilemma 7 : Til aftensmad er du blevet godt lækkersulten. Du tager kæresten med i byen og sidder med menukortet. Bestiller du en rib-eye eller sushi?
-          </h1>
+          <h1 class="question">Indkøb til aftensmad - Hvad har du lyst til?</h1>
+          <h2>På vej hjem fra din hobby har du lovet at køre forbi det lokale supermarked og handle ind til aftensmad. Hvilken ret har du mest lyst til?</h2>
         </div>
         <div class="dilemmaImages1">
           <img class="havregrynImg" src="Images/Havregryn.png" alt="" />
@@ -371,9 +367,8 @@
       </div>
       <div class="innermain" id="inner15">
         <div>
-          <h1 class="question">
-            Dilemma 7 : Om aftenen er du godt træt og trænger til at slappe af. Sætter du dig og skriver med ChatGPT i 45 minutter, eller tager du et afsnit Black Mirror på Netflix?
-          </h1>
+          <h1 class="question">Tid til at Slappe Af - Hvordan Slapper du Bedst Af?</h1>
+          <h2>Efter en god, hård og lang dag er det tid til at slappe af. Hvordan slapper du bedst af?</h2>
         </div>
         <div class="dilemmaImages1">
           <img class="havregrynImg" src="Images/Havregryn.png" alt="" />
