--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,7 @@
   <!-- Linket til d3 library -->
   <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
   <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
-<script src="https://d3js.org/d3-geo-projection.v2.min.js"></script>
+  <script src="https://d3js.org/d3-geo-projection.v2.min.js"></script>
 
   <body>
     <!-- Buttons til quiz scroller -->
@@ -123,6 +123,7 @@
           af et batteri er bla bla bla bla
         </h2>
 
+        <div id="graf"></div>
         <div id="graf"></div>
         <button id="updateChartBtn">Afspil grafen</button>
       </div>
@@ -412,6 +413,11 @@
       </div>
     </div>
 
+
+
+
+
+    <div id="chart"></div>
     <script src="scripts/animations/btnAnimation.js"></script>
     <script src="scripts/graf1.js"></script>
     <script src="scripts/stackedBarChart.js"></script>
