--- a/frontend/index.html
+++ b/frontend/index.html
@@ -120,7 +120,7 @@
        
         <div id="graf"></div>
         <div id="graf"></div>
-        <button id="updateChartBtn">Afspil grafen</button>
+        <button id="updateChartBtn">Tænd for vandet</button>
       </div>
     </div>
 
