--- a/frontend/index.html
+++ b/frontend/index.html
@@ -144,19 +144,19 @@
             id="dillema3Knap1"
             class="dilemmaButton"
             onclick="scrollForward()">
-            Havregryn med frugt
+            Elcykle
           </button>
           <button
           id="dillema3Knap2"
           class="dilemmaButton"
           onclick="scrollForward()">
-          Kaffe og wienerbrød
+          Diselebil
           </button>
           <button
             id="dillema3Knap3"
             class="dilemmaButton"
             onclick="scrollForward()">
-            Brød med peanutbutter og avocado
+            Krydstogtskib
           </button>
         </div>
       </div>
@@ -184,27 +184,20 @@
         <div class="dilemmaImages1">
           <img class="havregrynImg" src="Images/Havregryn.png" alt="" />
           <img class="sandwichImg" src="Images/Sandwich.png" alt="" />
-          <img class="kaffeImg" src="Images/Kaffe.png" alt="" />
         </div>
         <div class="dilemmaKnapper1">
           <button
             id="dillema4Knap1"
             class="dilemmaButton"
             onclick="scrollForward()">
-            Havregryn med frugt
-          </button>
+          Hakkebøf med Pommes og sauce </button>
           <button
             id="dillema4Knap2"
             class="dilemmaButton"
             onclick="scrollForward()">
-            Kaffe og wienerbrød
+            Falafel med ris og salat 
           </button>
-          <button
-            id="dillema4Knap3"
-            class="dilemmaButton"
-            onclick="scrollForward()">
-            Brød med peanutbutter og avocado
-          </button>
+        
         </div>
       </div>
     </div>
