--- a/frontend/index.html
+++ b/frontend/index.html
@@ -70,6 +70,9 @@
       
       <div class="innermain" id="inner2">
         <div id="dynamicContent">Indholdet ændres dynamisk her.</div>
+        <div class="textContainer">
+          <h1></h1>
+        </div>
       </div>
       <div class="header">
       </div>
