--- a/frontend/index.html
+++ b/frontend/index.html
@@ -139,7 +139,7 @@
           <h2>Nu er det tid til at tage på arbejde. Du har cirka 15 km til din arbejdsplads. Hvilket transportmiddel vil du benytte dig af?</h2>
         </div>
         <div class="dilemmaImages1">
-          <img class="havregrynImg" src="Images/Ebike.png" alt="" />
+          <img class="havregrynImg" src="Images/ebike.png" alt="" />
           <img class="sandwichImg" src="Images/car.png" alt="" />
           <img class="kaffeImg" src="Images/cruise.png" alt="" />
         </div>
