hvid jordklode tilføjet

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,6 +22,7 @@
         <h2>Hvert år øges fokus på behovet for at redde vores elskede planet. Men hvilke skridt kan hver enkelt af os tage for at sikre en bæredygtig fremtid?
            På denne side vil du blive guidet gennem en typisk hverdag og se, hvordan dine valg påvirker klimaet. Samtidig vil vi præsentere alternative valg, som kan hjælpe med at beskytte jorden. Lær, hvordan små ændringer i din daglige rutine kan gøre en stor forskel for vores fælles fremtid.
         </h2>
+        <img src="Images\white-earth.png" alt="billede af hvid jordklode" />
       </div>
       
     </div>
