--- a/frontend/index.html
+++ b/frontend/index.html
@@ -225,7 +225,7 @@
       <div class="innermain" id="inner9">
         <div>
           <h1 class="question">Efter Arbejde - Planlægning af Sommerferie</h1>
-          <h2>Efter arbejde har du og konen aftalt, at I skal planlægge sommerferie, og finde ud af hvor I gerne vil rejse hen, i er to voksne og to børn, hvor vil i gerne rejse hen?</h2>
+          <h2>Efter arbejde har du og din partner aftalt, at I skal planlægge sommerferie, og finde ud af hvor I gerne vil rejse hen. I er to voksne og to børn. Hvor vil i gerne rejse hen?</h2>
         </div>
         <div class="dilemmaImages1">
           <img class="havregrynImg" src="Images/miamiIcon.png" alt="" />
