--- a/frontend/index.html
+++ b/frontend/index.html
@@ -148,13 +148,13 @@
             id="dillema3Knap1"
             class="dilemmaButton"
             onclick="scrollForward()">
-            Elcykle
+            Elcykel
           </button>
           <button
           id="dillema3Knap2"
           class="dilemmaButton"
           onclick="scrollForward()">
-          Diselebil
+          Diselbil
           </button>
           <button
             id="dillema3Knap3"
