--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,7 +27,6 @@
           små ændringer i din daglige rutine kan gøre en stor forskel for vores
           fælles fremtid.
         </h2>
-        <img src="Images\white-earth.png" alt="billede af hvid jordklode" />
       </div>
     </div>
 
@@ -79,10 +78,9 @@
       <div class="innermain" id="inner2">
         <div id="dynamicContent">Indholdet ændres dynamisk her.</div>
         <div class="textContainer">
-          <h1>Denne graf viser</h1>
+          <h1>Denne graf viser werer </h1>
         </div>
       </div>
-      <h1>Denne graf </h1>
       <div class="header"></div>
     </div>
 
@@ -155,7 +153,6 @@
           <button
             id="dillema3Knap1"
             class="dilemmaButton"
-<<<<<<< HEAD
             onclick="scrollForward()"
           >
             Elcykle
@@ -166,16 +163,6 @@
             onclick="scrollForward()"
           >
             Diselebil
-=======
-            onclick="scrollForward()">
-            Elcykel
-          </button>
-          <button
-          id="dillema3Knap2"
-          class="dilemmaButton"
-          onclick="scrollForward()">
-          Diselbil
->>>>>>> refs/remotes/origin/main
           </button>
           <button
             id="dillema3Knap3"
@@ -241,7 +228,11 @@
       <div class="innermain" id="inner9">
         <div>
           <h1 class="question">Efter Arbejde - Planlægning af Sommerferie</h1>
-          <h2>Efter arbejde har du og konen aftalt, at I skal planlægge sommerferie, og finde ud af hvor I gerne vil rejse hen, i er to voksne og to børn, hvor vil i gerne rejse hen?</h2>
+          <h2>
+            Efter arbejde har du og konen aftalt, at I skal planlægge
+            sommerferie, og finde ud af hvor I gerne vil rejse hen, i er to
+            voksne og to børn, hvor vil i gerne rejse hen?
+          </h2>
         </div>
         <div class="dilemmaImages1">
           <img class="havregrynImg" src="Images/miamiIcon.png" alt="" />
