--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,6 +27,7 @@
           små ændringer i din daglige rutine kan gøre en stor forskel for vores
           fælles fremtid.
         </h2>
+        <img src="Images\white-earth.png" alt="billede af hvid jordklode" />
       </div>
     </div>
 
@@ -78,9 +79,10 @@
       <div class="innermain" id="inner2">
         <div id="dynamicContent">Indholdet ændres dynamisk her.</div>
         <div class="textContainer">
-          <h1>Denne graf viser werer </h1>
+          <h1>Denne graf viser </h1>
         </div>
       </div>
+      <h1>Denne graf </h1>
       <div class="header"></div>
     </div>
 
@@ -161,7 +163,6 @@
           class="dilemmaButton"
           onclick="scrollForward()">
           Diselbil
->>>>>>> refs/remotes/origin/main
           </button>
           <button
             id="dillema3Knap3"
@@ -228,9 +229,7 @@
         <div>
           <h1 class="question">Efter Arbejde - Planlægning af Sommerferie</h1>
           <h2>
-            Efter arbejde har du og konen aftalt, at I skal planlægge
-            sommerferie, og finde ud af hvor I gerne vil rejse hen, i er to
-            voksne og to børn, hvor vil i gerne rejse hen?
+            Efter arbejde har du og din partner aftalt, at I skal planlægge sommerferie, og finde ud af hvor I gerne vil rejse hen. I er to voksne og to børn. Hvor vil i gerne rejse hen?<
           </h2>
         </div>
         <div class="dilemmaImages1">
