--- a/frontend/index.html
+++ b/frontend/index.html
@@ -291,14 +291,14 @@
             class="dilemmaButton"
             onclick="scrollForward()"
           >
-            Miami
+            Motercross
           </button>
           <button
             id="dillema6Knap2"
             class="dilemmaButton"
             onclick="scrollForward()"
           >
-            Helsinki
+            Friluftsliv
           </button>
         </div>
       </div>
