--- a/frontend/index.html
+++ b/frontend/index.html
@@ -377,7 +377,7 @@
             class="dilemmaButton"
             onclick="scrollForward()"
           >
-            Barcelona
+            Chatte med AI
           </button>
         </div>
       </div>
