Ændret navn på knap

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -108,7 +108,7 @@
             class="dilemmaButton"
             onclick="scrollForward()"
           >
-            Havregryn med frugt
+            5 Minutters koldt bad
           </button>
 
           <button
@@ -116,7 +116,7 @@
             class="dilemmaButton"
             onclick="scrollForward()"
           >
-            Brød med peanutbutter og avocado
+            15 Minutters varmt bad
           </button>
         </div>
       </div>
