--- a/frontend/index.html
+++ b/frontend/index.html
@@ -77,12 +77,14 @@
     <!-- Resultatet af det første svar -->
     <div class="main" id="main2">
       <div class="innermain" id="inner2">
-        <div id="dynamicContent">Indholdet ændres dynamisk her.</div>
         <div class="textContainer">
-          <h1>Denne graf viser </h1>
+          <div id="dynamicContent">Indholdet ændres dynamisk her.</div>
+          <p>På denne graf kan du se den samlede udledning af CO2 for de enkelte madvare som indgår i måltiderne </p>
+          <p>Hvis du holder musen over en af barene kan du se hvor meget CO2 den givene sektor tilføjer til den samlede udledning</p>
+          <p>ILUC = <a href="https://ec.europa.eu/commission/presscorner/detail/en/MEMO_12_787">Indirect Land Use Change (ILUC)</a>
+          </p>
         </div>
       </div>
-      <h1>Denne graf </h1>
       <div class="header"></div>
     </div>
 
