--- a/frontend/index.html
+++ b/frontend/index.html
@@ -270,6 +270,9 @@
       <div class="innermain" id="inner10">
         <div id="factBox"></div>
         <svg id="uniqueSvg" width="1200" height="800"></svg>
+        <div class="textForMap">
+          <p>Her kan du sætte den dynamiske text</p>
+        </div>
       </div>
     </div>
 
