--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,7 +18,7 @@
       <div class="header"></div>
       <div class="innermain" id="inner0">
         <h1>Red Planeten - Dine Daglige Valg Gør en Forskel</h1>
-        <h2>
+        <p>
           Hvert år øges fokus på behovet for at redde vores elskede planet. Men
           hvilke skridt kan hver enkelt af os tage for at sikre en bæredygtig
           fremtid? På denne side vil du blive guidet gennem en typisk hverdag og
@@ -26,7 +26,7 @@
           alternative valg, som kan hjælpe med at beskytte jorden. Lær, hvordan
           små ændringer i din daglige rutine kan gøre en stor forskel for vores
           fælles fremtid.
-        </h2>
+        </p>
         <img src="Images\white-earth.png" alt="billede af hvid jordklode" />
       </div>
     </div>
@@ -79,9 +79,20 @@
       <div class="innermain" id="inner2">
         <div class="textContainer">
           <div id="dynamicContent">Indholdet ændres dynamisk her.</div>
-          <p>På denne graf kan du se den samlede udledning af CO2 for de enkelte madvare som indgår i måltiderne </p>
-          <p>Hvis du holder musen over en af barene kan du se hvor meget CO2 den givene sektor tilføjer til den samlede udledning</p>
-          <p>ILUC = <a href="https://ec.europa.eu/commission/presscorner/detail/en/MEMO_12_787">Indirect Land Use Change (ILUC)</a>
+          <p>
+            På denne graf kan du se den samlede udledning af CO2 for de enkelte
+            madvare som indgår i måltiderne
+          </p>
+          <p>
+            Hvis du holder musen over en af barene kan du se hvor meget CO2 den
+            givene sektor tilføjer til den samlede udledning
+          </p>
+          <p>
+            ILUC =
+            <a
+              href="https://ec.europa.eu/commission/presscorner/detail/en/MEMO_12_787"
+              >Indirect Land Use Change (ILUC)</a
+            >
           </p>
         </div>
       </div>
@@ -157,14 +168,16 @@
           <button
             id="dillema3Knap1"
             class="dilemmaButton"
-            onclick="scrollForward()">
+            onclick="scrollForward()"
+          >
             Elcykel
           </button>
           <button
-          id="dillema3Knap2"
-          class="dilemmaButton"
-          onclick="scrollForward()">
-          Diselbil
+            id="dillema3Knap2"
+            class="dilemmaButton"
+            onclick="scrollForward()"
+          >
+            Diselbil
           </button>
           <button
             id="dillema3Knap3"
@@ -231,7 +244,9 @@
         <div>
           <h1 class="question">Efter Arbejde - Planlægning af Sommerferie</h1>
           <h2>
-            Efter arbejde har du og din partner aftalt, at I skal planlægge sommerferie, og finde ud af hvor I gerne vil rejse hen. I er to voksne og to børn. Hvor vil i gerne rejse hen?<
+            Efter arbejde har du og din partner aftalt, at I skal planlægge
+            sommerferie, og finde ud af hvor I gerne vil rejse hen. I er to
+            voksne og to børn. Hvor vil i gerne rejse hen?<
           </h2>
         </div>
         <div class="dilemmaImages1">
