--- a/frontend/index.html
+++ b/frontend/index.html
@@ -246,7 +246,7 @@
           <h2>
             Efter arbejde har du og din partner aftalt, at I skal planlægge
             sommerferie, og finde ud af hvor I gerne vil rejse hen. I er to
-            voksne og to børn. Hvor vil i gerne rejse hen?<
+            voksne og to børn. Hvor vil i gerne rejse hen?
           </h2>
         </div>
         <div class="dilemmaImages1">
