--- a/frontend/index.html
+++ b/frontend/index.html
@@ -326,7 +326,11 @@
 
     <div class="main" id="main12">
       <div class="header"></div>
-      <div class="innermain" id="inner12"></div>
+      <div class="innermain" id="inner12">
+        <div class="textFor6">
+          <div class="dynamicContent6"></div>
+        </div>
+      </div>
     </div>
 
     <div class="main" id="main13">
@@ -405,7 +409,11 @@
 
     <div class="main" id="main16">
       <div class="header"></div>
-      <div class="innermain" id="inner16"></div>
+      <div class="innermain" id="inner16">
+        <div class="textFor8">
+          <div class="dynamicContent8"></div>
+        </div>
+      </div>
     </div>
 
     <div class="main" id="main17">
