--- a/frontend/index.html
+++ b/frontend/index.html
@@ -411,7 +411,7 @@
       <div class="header"></div>
       <div class="innermain" id="inner16">
         <div class="textFor8">
-          <div class="dynamicContent8"></div>
+          <div class="dynamicContent8">erterteertetrertetertertertertertet ertert et ert ert erte tet </div>
         </div>
       </div>
     </div>
