--- a/frontend/index.html
+++ b/frontend/index.html
@@ -137,16 +137,18 @@
 
     <div class="main" id="main4">
       <div class="header"></div>
-      <div class="innermain" id="inner4">
+      <div class="eBody4">
         <h2>
-          En El-bil udleder mere co2 end hvad man kunne forvente. Produktionen
-          af et batteri er bla bla bla bla
+        CO2 udledning ved et koldt eller varmt bad
         </h2>
-
-        <div id="graf"></div>
-        <div id="graf"></div>
-        <button id="updateChartBtn">Tænd for vandet</button>
       </div>
+      <div class="innermain" id="inner4">
+        <div class="textFor6">
+          <div class="dynamicContent8">Hvis du "tænder for vandet" ved at klikke knappen herunder, kan du se, hvordan din CO2 udledning vil se ud, imens du står under bruseren. Den blå linjer viser din udledning ved et koldt bad - dvs. 10 grader varmt vand. Den røde linjer viser din udledning, hvis du tager et varmt bad på ca. 40 grader</div>
+        </div>
+        <div id="graf"></div>
+      </div>
+      <button id="updateChartBtn">Tænd for vandet</button>
     </div>
 
     <div class="main" id="main5">
@@ -191,10 +193,13 @@
     </div>
 
     <div class="main" id="main6">
-      <div class="header"></div>
       <div class="innermain" id="inner6">
+        <div class="textFor12">
+          <div class="dynamicContent8">Ja, forskellige transportmidler udleder altså forskellige mængder CO2 pr. km.</div>
+        </div>
         <div id="test"></div>
       </div>
+    <div class="header"></div>
     </div>
 
     <div class="main" id="main7">
@@ -324,11 +329,12 @@
       </div>
     </div>
 
+    <!-- Visualiseringen af motocross/lejrbål dilemmaet -->
     <div class="main" id="main12">
       <div class="header"></div>
       <div class="innermain" id="inner12">
         <div class="textFor6">
-          <div class="dynamicContent6"></div>
+          <div class="dynamicContent8">Til venstre kan du se en repræsentation af, hvor meget CO2 du ville udlede, hvis du tog til motocrosstræning ift. hvis du tog til spejder og lavede bål med nogle af de andre blåskjorter. <br><br> Fun fact: Til en motocrosstræning bruger man ca. 11,5 liter benzin. <br><br>Vidste du, at man ved at brænde ét kg træ af udleder ca. 1,65 kg CO2. Altså mere end træets vægt!</div>
         </div>
       </div>
     </div>
@@ -411,7 +417,7 @@
       <div class="header"></div>
       <div class="innermain" id="inner16">
         <div class="textFor8">
-          <div class="dynamicContent8"></div>
+          <div class="dynamicContent8">Her kan du se, at det ville udlede en del mere CO2 at se Netflix - eller en anden slags streaming - i forhold til at "snakke" med ChatGPT. <br><br> Vi har taget udgangspunkt i at man streamer 1,5 time sammenlignet med, at man fører en samtale med ChatGPT, som ender på 90 beskeder fra dig. <br><br>Én henvendelse til ChatGPT udleder ca. 0,5g CO2. </div>
         </div>
       </div>
     </div>
